# Inference-and-Deployment-huiwei1

./: .gitignore  AI硕士信创产业就业指南_2025.md  AI硕士求职入门培训手册.md  Day1_基础概念_笔记.md  Day2_PagedAttention_笔记.md  Day3_ContinuousBatching_FlashAttention_笔记.md  Day4_KsanaLLM源码_笔记.md  Day5_实践体验_笔记.md  Day6_面试问答_全集.md  Day7_模拟面试_最终检查.md  README.md  信创产业深度研究报告_2025.md  战术.md  简历_项目经历.md  简历项目_推理优化方向.md  腾讯混元推理优化面试准备指南.md
KsanaLLM/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_cn.md  requirements.txt  setup.py
KsanaLLM/benchmarks/: README.md  bench_one_batch.sh  benchmark_throughput.py  check_diff.py  longbench_reader.py
KsanaLLM/cmake/: FlashAttention3AutoBuild.cmake  nvidia.cmake  zixiao.cmake
KsanaLLM/docker/: Dockerfile.gpu  Dockerfile.tencentos4.gpu
KsanaLLM/docs/: monitoring_metrics_guide.md  pd_separation_startup.md  quant_support.md
KsanaLLM/examples/: api_demo.py  deepseek_fp8_perf.yaml  deepseek_int4_perf.yaml  ksana_llm.yaml  ksana_llm2-7b.yaml  ksana_llm_ascend_llama13b.yaml  ksana_llm_ascend_llama13b_multi_npu.yaml  ksana_llm_deepseekv2.yaml  ksana_llm_disaggregating_decode.yaml  ksana_llm_disaggregating_pd.yaml  ksana_llm_disaggregating_prefill.yaml  ksana_llm_distributed.yaml  ksana_llm_ixc.yaml  ksana_llm_llama2_13b.yaml  ksana_llm_qwen2.yaml  ksana_llm_qwen3_32b.yaml  ksana_llm_qwenvl.yaml
KsanaLLM/examples/deepseekv2/: config.json  ksana_llm_deepseek_v2_tp2_dp2.yaml
KsanaLLM/examples/llama7b/: ksana_llm.yaml  ksana_llm_blocked_prefill.yaml  ksana_llm_dp.yaml  ksana_llm_tp.yaml
KsanaLLM/src/: CMakeLists.txt
KsanaLLM/src/ksana_llm/: CMakeLists.txt  weight_status.h
KsanaLLM/src/ksana_llm/batch_manager/: CMakeLists.txt  batch_manager.cpp  batch_manager.h  batch_manager_test.cpp  schedule_processor.cpp  schedule_processor.h  schedule_processor_interface.h  schedule_processor_test.cpp
KsanaLLM/src/ksana_llm/batch_scheduler/: CMakeLists.txt  batch_scheduler.cpp  batch_scheduler.h  batch_scheduler_balance_reqs_algo.cpp  batch_scheduler_balance_reqs_algo.h  batch_scheduler_balance_reqs_algo_test.cpp  batch_scheduler_interface.h  batch_scheduler_test.cpp  batch_scheduler_test.h  batch_scheduler_test_client.h  batch_scheduler_test_helper.h  batch_scheduler_test_helper_test.cpp
KsanaLLM/src/ksana_llm/cache_manager/: CMakeLists.txt  base_cache_manager.h  cache_manager_factory.cpp  cache_manager_factory.h  cache_manager_interface.h  direct_cache_manager.cpp  direct_cache_manager.h  prefix_cache_manager.cpp  prefix_cache_manager.h  prefix_cache_manager_test.cpp  prefix_cache_manager_test_helper.h
KsanaLLM/src/ksana_llm/connector/: CMakeLists.txt  config.h  connector.cpp  connector.h  connector_test.cpp  device_collector.h  device_info_manager.cpp  device_info_manager.h  node_info.h  task_dispatcher.cpp  task_dispatcher.h  task_dispatcher_nccl_test.cpp  task_key.h  task_manager.cpp  task_manager.h  task_manager_test.cpp
KsanaLLM/src/ksana_llm/cpp/: README.md
KsanaLLM/src/ksana_llm/data_hub/: CMakeLists.txt  data_hub.cpp  data_hub.h  data_hub_test.cpp  expert_data_hub.cpp  expert_data_hub.h  expert_parallel_deepep_wrapper.cpp  expert_parallel_deepep_wrapper.h  expert_parallel_deepep_wrapper_test.cpp  hidden_unit_buffer.cpp  hidden_unit_buffer.h  hidden_unit_buffer_test.cpp  schedule_output.cpp  schedule_output.h  schedule_output_test.cpp
KsanaLLM/src/ksana_llm/distributed/: CMakeLists.txt  control_channel.cpp  control_channel.h  control_channel_test.cpp  control_message.h  data_channel.cpp  data_channel.h  data_channel_factory.cpp  data_channel_factory.h  data_channel_interface.h  data_channel_test.cpp  distributed_coordinator.cpp  distributed_coordinator.h  distributed_coordinator_test.cpp  expert_parallel_control_channel.cpp  expert_parallel_control_channel.h  expert_parallel_control_channel_test.cpp  node_info.h  packet_type.h  packet_util.cpp  raw_socket.cpp  raw_socket.h
KsanaLLM/src/ksana_llm/endpoints/: CMakeLists.txt  endpoint_factory.h
KsanaLLM/src/ksana_llm/helpers/: environment_test_helper.h
KsanaLLM/src/ksana_llm/kernels/: CMakeLists.txt  grouped_topk.h  trans_layout.h
KsanaLLM/src/ksana_llm/layers/: CMakeLists.txt  activation_layer.h  add_layer.h  add_mul_layer.h  add_norm_layer.h  all_reduce_residual_add_norm_layer.h  assemble_tokens_hidden_layer.h  attention_layer.h  base_layer.h  batched_matmul_layer.h  blockwise_matmul_layer.h  cast_layer.h  concat_layer.h  custom_all_reduce_sum_layer.h  cutlass_matmul_layer.h  cutlass_moe_layer.h  eccl_all_gather_layer.h  eccl_all_reduce_sum_layer.h  emb_lookup_layer.h  finegrained_mixed_dtype_gemm_layer.h  flash_attention_layer.h  flash_mla_attention_layer.h  flash_sparse_mla_attention_layer.h  flash_sparse_mla_indexer_layer.h  flashinfer_resource_manager.cpp  flashinfer_resource_manager.h  fp8_matmul_layer.h  fp8_moe_layer.h  greedy_sampler_layer.h  grouped_topk_layer.h  hccl_all_gather_layer.h  hccl_all_reduce_sum_layer.h  input_refit_layer.h  layer_test.cpp  layer_workspace_manager.h  layernorm_layer.h  lm_head_matmul_layer.h  machete_matmul_layer.h  marlin_matmul_layer.h  marlin_moe_layer.h  (+18 more)
KsanaLLM/tests/: integration_test.py
KsanaLLM/tests/tiny_model_configs/: bge_reranker_model_config.json  gpt_model_config.json  internlmxcomposer_model_config.json  moe_model_config.json  simple_model_config.json  vl_model_config.json
KsanaLLM/tools/: CMakeLists.txt  generate_triton_kernel_cubin.sh
KsanaLLM/tools/deepep_wrapper/: CMakeLists.txt  README.md
KsanaLLM/tools/eplb/: README.md  expert_activation_heatmap.py  expert_parallel_get_map.py
KsanaLLM/tools/profiler/: README.md  README_cn.md  sched_event_trace_process.py
flash-attention-opt/: CMakeLists.txt  README.md
flash-attention-opt/doc/: 【CUDA编程】flash attention CUDA 算子实现思路.md
flash-attention-opt/examples/: CMakeLists.txt  attention_baseline.cu  benchmark_all.cu  flash_attention_v1.cu  flash_attention_v2.cu  flash_attention_v3.cu  flash_attention_v4.cu  flash_attention_v5.cu  flash_attention_v6.cu  minmal_flash_attention.cu
flash-attention-opt/flash_attention/: CMakeLists.txt  attention.cu  attention.cuh  utils.h
(+768 files in other folders)
