# Copyright 2024 Tencent Inc.  All rights reserved.
#
# ==============================================================================

# import external dependencies
include(external/abseil-cpp)
include(external/protobuf)
include(external/tbb)
include(external/fmt)
include(external/loguru)
include(external/gflags)
include(external/httplib)
include(external/pybind11)
include(external/nlohmann_json)
include(external/base64)
include(external/msgpack)
include(external/re2)
include(external/opentelemetry)
include(external/polaris_cpp)
include(external/yaml-cpp)
include(external/cppzmq)
include(external/libzmq)
include(external/xgrammar)

# import subprojects
add_subdirectory(ksana_llm)
